--- a/pokedex-adventure/package.json
+++ b/pokedex-adventure/package.json
@@ -4,14 +4,19 @@
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack-dev-server --mode development --config webpack.dev.js",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "fake:api": "json-server --watch db.json"
   },
   "dependencies": {
+    "@polymer/app-route": "^3.0.0-pre.20",
+    "@polymer/iron-ajax": "^3.0.0-pre.25",
+    "@polymer/iron-pages": "^3.0.0-pre.25",
     "@polymer/polymer": "^3.0.5",
     "@webcomponents/webcomponentsjs": "^2.1.1"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "json-server": "^0.14.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7",
